# aks-automation

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aks-deploy.yml  ci.yml
kubernetes/: deployment.yaml
src/: aks_manager.py  main.py  requirements.txt
src/aks_automation/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  manager.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: backend.hcl  terraform.tfvars
terraform/environments/prod/: backend.hcl  terraform.tfvars
terraform/modules/aks/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
tests/: test_config.py  test_manager.py
